# meridian

./: .gitignore  Cargo.toml  README.md  WORKFLOW.md
crates/meridian/: Cargo.toml
crates/meridian-agent/: Cargo.toml
crates/meridian-agent/src/: client.rs  error.rs  event.rs  lib.rs  protocol.rs
crates/meridian-agent/tests/: codex_e2e.rs
crates/meridian-automations/: Cargo.toml
crates/meridian-automations/runtime-assets/: runner.mjs
crates/meridian-automations/src/: assets.rs  evaluator.rs  executor.rs  lib.rs  manifest.rs  nl.rs  registry.rs  runtime.rs  schedule.rs  scheduler.rs  sdk.rs  service.rs  tokens.rs
crates/meridian-config/: Cargo.toml
crates/meridian-config/src/: config.rs  error.rs  lib.rs  loader.rs  prompt.rs  reload.rs
crates/meridian-core/: Cargo.toml
crates/meridian-core/src/: identifier.rs  issue.rs  lib.rs  orchestrator_state.rs  retry.rs  session.rs  workspace.rs
crates/meridian-orchestrator/: Cargo.toml
crates/meridian-orchestrator/src/: harnesses.rs  lib.rs  orchestrator.rs  repos.rs  snapshot.rs
crates/meridian-pages/: Cargo.toml
crates/meridian-pages/src/: lib.rs  meta.rs  nl.rs  registry.rs  service.rs
crates/meridian-server/: Cargo.toml
crates/meridian-server/src/: lib.rs
crates/meridian-store/: Cargo.toml
crates/meridian-store/src/: error.rs  lib.rs  models.rs  schema.rs  store.rs
crates/meridian-tracker/: Cargo.toml
crates/meridian-tracker/src/: error.rs  github.rs  lib.rs  linear.rs  sqlite.rs  tracker.rs
crates/meridian-workspace/: Cargo.toml
crates/meridian-workspace/src/: hooks.rs  lib.rs  manager.rs
crates/meridian/src/: main.rs
desktop/: .gitignore  electron-builder.yml  index.html  main.js  package-lock.json  package.json  page-runtime.html  preload.js  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  atoms.tsx  demoSnapshot.ts  dummyData.ts  format.ts  harnessLogos.ts  icons.tsx  main.tsx  search.ts  styles.css  symphonyMap.ts  types.ts  useSessionLog.ts
desktop/src/chat/: ChatSidebar.tsx  setup.ts  tools.ts
desktop/src/page-runtime/: main.tsx
desktop/src/screens/: ActivityPanel.tsx  Agents.tsx  AssignMenu.tsx  Automations.tsx  Dashboard.tsx  Harnesses.tsx  Inbox.tsx  IssueDetail.tsx  Live.tsx  Other.tsx  PageView.tsx  Pages.tsx  Repos.tsx  Routing.tsx  Tasks.tsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  atoms.tsx  icons.tsx  styles.css  types.ts  useSnapshot.ts
frontend/src/screens/: Agents.tsx  Dashboard.tsx  Other.tsx
