[workspace]
resolver = "2"
members = [
    "crates/meridian-core",
    "crates/meridian-config",
    "crates/meridian-workspace",
    "crates/meridian-tracker",
    "crates/meridian-agent",
    "crates/meridian-orchestrator",
    "crates/meridian-server",
    "crates/meridian",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Srikanth Srungarapu <srikanth@crowdshakti.com>"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
parking_lot = "0.12"
notify = "6.1"
liquid = "0.26"
liquid-core = "0.26"
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.20"
futures = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.11"
dirs = "5.0"

meridian-core = { path = "crates/meridian-core" }
meridian-config = { path = "crates/meridian-config" }
meridian-workspace = { path = "crates/meridian-workspace" }
meridian-tracker = { path = "crates/meridian-tracker" }
meridian-agent = { path = "crates/meridian-agent" }
meridian-orchestrator = { path = "crates/meridian-orchestrator" }
meridian-server = { path = "crates/meridian-server" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
