[package]
name = "meridian-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meridian-core.workspace = true
meridian-config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync", "time", "rt", "macros"] }
futures.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
