[package]
name = "meridian-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meridian-core.workspace = true
meridian-config.workspace = true
meridian-workspace.workspace = true
meridian-tracker.workspace = true
meridian-agent.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
async-trait.workspace = true
futures.workspace = true
