[package]
name = "meridian-pages"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meridian-store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["full"] }
notify.workspace = true
toml.workspace = true
