[package]
name = "meridian-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meridian-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
uuid.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
