[package]
name = "meridian-tracker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meridian-core.workspace = true
meridian-config.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["time", "rt", "process", "io-util"] }
